force-app/main/default/objects/AV_OtherEntitiesProducts__c/AV_OtherEntitiesProducts__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>custom setting para guardar los valores de los porductos de otras entidades</description>
    <label>Other entities Products</label>
</CustomObject>