force-app/main/default/objects/AV_OtherEntitiesProducts__c/fields/AV_Amount__c.field-meta.xml
<CustomField>
    <fullName>AV_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Importe de los productos de otras entidades</description>
    <label>Importe</label>
    <type>Checkbox</type>
</CustomField>