force-app/main/default/objects/AV_OtherEntitiesProducts__c/fields/AV_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>AV_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matricula de los porductos de otras entidades</description>
    <label>Matricula</label>
    <type>Checkbox</type>
</CustomField>