force-app/main/default/objects/AV_OtherEntitiesProducts__c/fields/AV_Entity__c.field-meta.xml
<CustomField>
    <fullName>AV_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entidad</label>
    <type>Checkbox</type>
</CustomField>