force-app/main/default/objects/AV_OtherEntitiesProducts__c/fields/AV_Expiration__c.field-meta.xml
<CustomField>
    <fullName>AV_Expiration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vencimiento</label>
    <type>Checkbox</type>
</CustomField>