force-app/main/default/objects/AV_OtherEntitiesProducts__c/fields/AV_InterestRate__c.field-meta.xml
<CustomField>
    <fullName>AV_InterestRate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tipo de interes de los productos de otras entidades</description>
    <label>Tipo interés</label>
    <type>Checkbox</type>
</CustomField>