force-app/main/default/objects/AV_OtherEntitiesProducts__c/fields/AV_Share__c.field-meta.xml
<CustomField>
    <fullName>AV_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuota</label>
    <type>Checkbox</type>
</CustomField>